3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Partial fix for #1772759: Too much alchemy causes client crash.
 common/object.c: correctly send/remove object when in container the player is
  looking into.
Nicolas Weeger 2007-08-12

Fix plugin documentation, add some .ps version made from the wiki.
This fixes bug #1537236: cfpython 2.0 - documentation missing.
 doc/plugins
 doc/Developers/Makefile.am plugins python README
Added files:
 doc/Developers/plugins.ps python.ps
Nicolas Weeger 2007-08-12

Save maps into a .savefile first, then rename if success. Flush files.
This should fix bug #1542893: Full disk destroys player's apartment.
 common/map.c
 include/map.h
 server/c_wiz.c swap.c
Nicolas Weeger 2007-08-12

Don't delete (partial) map from memory in case of save error, warn DMs.
 include/libproto.h map.h sproto.h
 common/loader.l map.c
 server/c_wiz.c login.c swap.c
Nicolas Weeger 2007-08-11

Add new NDI_ALL_DMS to send a message to all connected DMs. Used in case of errors.
 include/newclient.h
 socket/info.c
Nicolas Weeger 2007-08-11

server/player.c: fix find_better_arrow() comment, allow parameter to be NULL.
Nicolas Weeger 2007-08-11

doc/Developers/map.dox: add some real content.
Nicolas Weeger 2007-08-09

doc/playbook-html/Makefile.am,doc/spoiler-html/Makefile.am:  Update the
  clean directive to remove the png files, since that is what is now
  used, and not gif files.
MSW 2007-08-08

Server support for Metaserver2:
acinclude.m4: Add LIBCURL_CHECK_CONFIG macro, used by configure.
configure.ac: Add check for pthread, LIBCURL.  Extra
  logic to display if we will build with metaserver2 support
lib/Makefile.am: add metaserver2 to list of files to install.